--- a/_posts/2022-04-20-Optics.md
+++ b/_posts/2022-04-20-Optics.md
@@ -83,17 +83,17 @@ mathjax: true
 
 可以证明如果非傍轴，不能理想成像；傍轴用到近似 $$\sin\theta\approx\tan\theta\approx\theta$$，可理想成像。
 
-符号规则：规定光线的传播方向为自左到右。长度量由指定的原点量起，其方向与光的传播方向一致为正，反之为负；高度量以垂直光轴向上为正，向下为负；角度量以锐角衡量，由主光轴 / 法线顺时针转到光线为正，逆时针转成者为负。
+**符号规则**：规定光线的传播方向为自左到右。长度量由指定的原点量起，其方向与光的传播方向一致为正，反之为负；高度量以垂直光轴向上为正，向下为负；角度量以锐角衡量，由主光轴 / 法线顺时针转到光线为正，逆时针转成者为负。
 
 <img src="/images/blog/Optics_image.png" alt="Optics_image" style="zoom:50%;" />
 
 <p>from 于老师 几何光学 81</p>
 
-关系式为 $$\displaystyle\frac{n'}{p'}-\frac{n}{p}=\frac{n'-n}{r}$$。其中 $$\displaystyle\Phi=\frac{n'-n}{r}$$ 为**光焦度**，表征折射球面的聚光本领，单位为屈光度 $$1D=1m^{-1}$$。物方焦距 $$\displaystyle f=-\frac{n}{n'-n}r=-\frac{n}{\Phi}$$，像方焦距 $$\displaystyle f'=\frac{n'}{n'-n}r=\frac{n'}{\Phi}$$。例：平面折射 $$r=\infty$$，光焦度 $$\Phi=0$$，只有在傍轴条件下才能理想成像。
+关系式为 $$\displaystyle\frac{n'}{p'}-\frac{n}{p}=\frac{n'-n}{r}$$。其中 $$\displaystyle\Phi=\frac{n'-n}{r}$$ 为**光焦度**，表征折射球面的聚光本领，单位为屈光度 $$1D=1m^{-1}$$。物方焦距 $$\displaystyle f=-\frac{n}{n'-n}r=-\frac{n}{\Phi}$$，像方焦距 $$\displaystyle f'=\frac{n'}{n'-n}r=\frac{n'}{\Phi}$$。将物方焦距和像方焦距带入物像关系式，得到**高斯公式** $$\displaystyle\frac{f'}{p'}+\frac{f}{p}=1$$。放大率 $$\displaystyle\beta=\frac{y'}{y}=\frac{np'}{n'p}=-\frac{f}{x}=-\frac{x'}{f'}$$。例：平面折射 $$r=\infty$$，光焦度 $$\Phi=0$$，只有在傍轴条件下才能理想成像。
 
 #### 傍轴条件球面反射
 
-看成是从折射率 $$n$$ 到 $$-n$$ 的特殊折射，$$\displaystyle\frac{1}{p'}+\frac{1}{p}=\frac{2}{r}$$。
+看成是从折射率 $$n$$ 到 $$-n$$ 的特殊折射，$$\displaystyle\frac{1}{p'}+\frac{1}{p}=\frac{2}{r}$$，可见 $$f=r/2$$。
 
 #### 透镜
 
@@ -101,11 +101,15 @@ mathjax: true
 
 两个球面逐次成像，$$\displaystyle\frac{n'}{p'}-\frac{n}{p}=\frac{n_0-n}{r_1}+\frac{n'-n_0}{r_2}$$。光焦度 $$\displaystyle\Phi=\frac{n_0-n}{r_1}+\frac{n'-n_0}{r_2}=\Phi_1+\Phi_2$$。
 
-近视眼镜是发散透镜，$$\Phi<0$$。
+近视眼镜是发散透镜，$$\Phi<0$$。类似上面带入 $$\displaystyle f=-\frac{n}{\Phi}$$, $$\displaystyle f'=\frac{n'}{\Phi}$$，也得到高斯公式。薄透镜横向放大率 $$\beta=\beta_1\beta_2$$。
 
-- <img src="/images/blog/Optics_Eye_Exam.png" alt="Optics_Eye_Exam" style="zoom:60%;" />
+<img src="/images/blog/Optics_Eye_Exam.png" alt="Optics_Eye_Exam" style="zoom:60%;" />
 
-  <p>from 于老师 几何光学 107</p>
+<p>from 于老师 几何光学 107</p>
+
+例：望远镜——两个焦点重合的薄透镜排在一起（星星：平行光，入眼：平行光）。伽利略式望远镜：物镜为凸透镜，目镜为凹透镜，正立虚像。开普勒式望远镜：物镜和目镜都为凸透镜，倒立虚像。
+
+例：显微镜——两个焦点近似重合的凸透镜排在一起。
 
 ## 光的偏振
 
