--- a/_posts/2023-11-02-Language.md
+++ b/_posts/2023-11-02-Language.md
@@ -17,7 +17,7 @@ mathjax: true
 
   > A **theory** is a [rational](https://en.wikipedia.org/wiki/Reason) type of [abstract thinking](https://en.wikipedia.org/wiki/Abstraction) about a [phenomenon](https://en.wikipedia.org/wiki/Phenomenon), or the results of such thinking. ---[Wikipedia](https://en.wikipedia.org/wiki/Theory)
   >
-  > In [mathematics](https://en.wikipedia.org/wiki/Mathematics), a **theorem** is a [statement](https://en.wikipedia.org/wiki/Statement_(logic)) that has been [proved](https://en.wikipedia.org/wiki/Mathematical_proof), or can be proved.[[a\]](https://en.wikipedia.org/wiki/Theorem#cite_note-2)[[2\]](https://en.wikipedia.org/wiki/Theorem#cite_note-3)[[3\]](https://en.wikipedia.org/wiki/Theorem#cite_note-4) ---[Wikipedia](https://en.wikipedia.org/wiki/Theorem)
+  > In [mathematics](https://en.wikipedia.org/wiki/Mathematics), a **theorem** is a [statement](https://en.wikipedia.org/wiki/Statement_(logic)) that has been [proved](https://en.wikipedia.org/wiki/Mathematical_proof), or can be proved. ---[Wikipedia](https://en.wikipedia.org/wiki/Theorem)
 
   Taste: **Information theory** and **asymptotic equipartition theorem**.
 
@@ -39,6 +39,12 @@ mathjax: true
 
   - You should eat more food that contains a lot of fibre, e.g. fruit, vegetables, and bread.
 
+### Other
+
+- tuum est
+
+  It is yours. / It is up to you. The motto of the University of British Columbia.
+
 ### Mathematics
 
 - QED [source](https://dictionary.cambridge.org/dictionary/english/qed?q=q.e.d)
@@ -49,8 +55,14 @@ mathjax: true
 
   a Latin phrase meaning literally 'for this': made or happening only for a particular purpose or need, not planned before it happens: 
 
-  - on an ad hoc basis We deal with problems on an ad hoc basis (= as they happen). 
+  - on an ad hoc basis. We deal with problems on an ad hoc basis (= as they happen). 
   - an ad hoc committee/meeting 
+
+### Chemistry
+
+- isomeric
+
+  ἴσος (equal) + μέρος (part)
 
 ### Life Science
 
@@ -102,7 +114,9 @@ mathjax: true
 
 ### Mathematics
 
-- Eigen [source]()
+- Eigen for eigenvalue, eigenfunction, eigenmode... 
+
+  own.
 
 - Ansatz [source](https://en.wikipedia.org/wiki/Ansatz)
 
@@ -114,7 +128,7 @@ mathjax: true
 
   Description of a state, a country.
   
-- $$\Z$$ for integers, Zählen
+- $$\mathbb Z$$ for integers, Zählen
 
   To count. 
 
@@ -132,7 +146,7 @@ mathjax: true
 
 - *s-like*, senkrecht
 
-  s and p polarization. The component of the electric filed parallel to the plane of incidence is termed *s-like*, from senkrecht, German for perpendicular.
+  s and p polarization. The electric field component parallel to the plane of incidence is termed *s-like*, from senkrecht, German for perpendicular.
 
 ## From French
 
