--- a/_posts/2021-09-30-Calculus.md
+++ b/_posts/2021-09-30-Calculus.md
@@ -33,7 +33,17 @@ mathjax: true
   
   - 推论：几何平均值 ≤ 算术平均值。
 
-### Stirling's Formula
+## 一元函数
+
+### 极限
+
+数列极限的“$$ \epsilon-N$$ 语言” “$$ G-N$$ 语言”，函数极限的“$$ \epsilon-\delta$$ 语言” “$$ \epsilon-K$$ 语言”。
+
+连续函数：物理学家喜欢研究的好函数。可以用极限的语言描述连续性。
+
+例：$$\displaystyle\lim_{n\to\infty}a_n=A$$ -> $$\displaystyle\lim_{n\to\infty}\frac{1}{n}\sum_{k=0}^na_k=A$$ 可用“$$ \epsilon-N$$ 语言”证明；若还有 $$A>0$$ -> $$\displaystyle\lim_{n\to\infty}(\prod_{k=0}^na_k)^{1/n}=A$$ 取对数并用前面的结论证明。
+
+#### Stirling's Formula
 
 - 写法 1：$$n!$$ ~ $$\sqrt{2\pi n}n^ne^{-n}$$, also $$\displaystyle\lim_{n\to\infty}\frac{n!}{\sqrt{2\pi n}n^ne^{-n}}=1$$，用放缩法数列 $$\displaystyle d_n=\log(n!)-(n+\frac{1}{2})\log(n)+n$$ 在 $$n\to\infty$$ 有界，见 All chapter 18.6。
 
@@ -45,15 +55,9 @@ mathjax: true
 
   **Stirling's approximation**: Plug in $$\phi(x)=\ln(N)-1$$ to the saddle point integration.
 
-## 一元函数
-
-一元函数知识点的简单例子：[微积分 - 一元函数](https://shi200005.github.io/download_file/Calculus_Mono.pdf)。
-
 ### 微分学
 
-极限：数列极限的“$$ \epsilon-N$$ 语言” “$$ G-N$$ 语言”，函数极限的“$$ \epsilon-\delta$$ 语言” “$$ \epsilon-K$$ 语言”。
-
-连续函数：物理学家喜欢研究的好函数。可以用极限的语言描述连续性。
+一元函数知识点的简单例子：[微积分 - 一元函数](https://shi200005.github.io/download_file/Calculus_Mono.pdf)。
 
 可导/可微：一元情况下等价。**切线**：对函数某处线性增长率的刻画，$$y\approx f(a)+f'(a)(x-a)$$。
 
@@ -63,7 +67,11 @@ mathjax: true
 
 泰勒级数 $$\displaystyle \sum _{n=0}^{\infty }{\frac {f^{(n)}(a)}{n!}}(x-a)^{n}$$
 
-导数、导函数、反函数的导函数、隐函数的导函数。
+导数、导函数。
+
+反函数的导函数 $$y=f(x)$$ -> $$\displaystyle\frac{d}{dy}f^{-1}(y)=f'(f^{-1}(y))^{-1}$$. 例：$$\displaystyle\frac{d}{dx}\ln x=\frac{1}{x}$$.
+
+隐函数的导函数（链式法则）例：$$\displaystyle\frac{d}{dx}\arctan x=\frac{1}{1+x^2}$$. 过程：$$y=\arctan x$$, $$x=\tan y$$, $$\displaystyle\frac{d}{dx}x=\frac{d}{dx}\tan y$$，又 $$\displaystyle\frac{d}{dx}\tan y=\frac{d\tan y}{dy}\frac{dy}{dx}=\sec^2{y}\frac{dy}{dx}$$ -> $$\displaystyle 1=\sec^2y\frac{dy}{dx}$$ -> $$\displaystyle\frac{dy}{dx}=\cos^2y=\frac{\cos^2y}{\cos^2y+\sin^2y}=\frac{1}{1+\tan^2y}=\frac{1}{1+x^2}$$.
 
 [微积分 - 自然对数e](https://shi200005.github.io/download_file/Calculus_Natural_Logarithm.pdf)。**pending：证明超越数。**逼近 $$e$$ 的值：使用 $$\displaystyle e=\frac{1}{1!}+\frac{1}{2!}+\frac{1}{3!}+\frac{1}{4!}+\frac{1}{5!}+...$$
 
