--- a/_posts/2023-11-02-Language.md
+++ b/_posts/2023-11-02-Language.md
@@ -11,7 +11,7 @@ mathjax: true
 
 ### Mathematics
 
-- theory
+- theory & theorem
 
   **The difference between 'theory' and 'theorem'.**
 
@@ -39,12 +39,6 @@ mathjax: true
 
   - You should eat more food that contains a lot of fibre, e.g. fruit, vegetables, and bread.
 
-### Other
-
-- tuum est
-
-  It is yours. / It is up to you. The motto of the University of British Columbia.
-
 ### Mathematics
 
 - QED [source](https://dictionary.cambridge.org/dictionary/english/qed?q=q.e.d)
@@ -57,12 +51,6 @@ mathjax: true
 
   - on an ad hoc basis. We deal with problems on an ad hoc basis (= as they happen). 
   - an ad hoc committee/meeting 
-
-### Chemistry
-
-- isomeric
-
-  ἴσος (equal) + μέρος (part)
 
 ### Life Science
 
@@ -85,6 +73,12 @@ mathjax: true
   In chemistry, the **Fischer projection**, devised by Emil Fischer in 1891, is a two-dimensional representation of a three-dimensional organic molecule by projection. Fischer projections were originally proposed for the depiction of carbohydrates and used by chemists, particularly in organic chemistry and biochemistry. [source](https://en.wikipedia.org/wiki/Fischer_projection#:~:text=In%20chemistry%2C%20the%20Fischer%20projection,in%20organic%20chemistry%20and%20biochemistry.)
 
   - D-Glucose, L-Alanine.
+
+### Other
+
+- tuum est
+
+  It is yours. / It is up to you. The motto of the University of British Columbia.
 
 ## From Greek
 
@@ -109,6 +103,12 @@ mathjax: true
 - diploid from διπλούς
 
   Double.
+
+### Chemistry
+
+- isomeric
+
+  ἴσος (equal) + μέρος (part)
 
 ## From German
 
