--- a/_posts/2022-04-20-Optics.md
+++ b/_posts/2022-04-20-Optics.md
@@ -265,9 +265,7 @@ $$\displaystyle\tilde E(x,y)=\frac{1}{i\lambda}\iint_\Sigma\tilde E(x_0,y_0)\fra
 - 例：平面波入射 -> 圆孔（半径为 $$R$$） -> 艾里斑。极坐标下求解，得到 $$\displaystyle I=I_0[\frac{2J_1(\varphi)}{\varphi}]^2$$，其中 $$\displaystyle\varphi=\frac{2\pi}{\lambda}R\sin\theta$$，$$\theta$$ 是衍射角，$$J_1$$ 是[贝塞尔函数](https://shi200005.github.io/2022/02/16/Partial-Differential-Equations/#贝塞尔函数)。第一极小的衍射角为 $$\sin\theta=0.61\lambda/R$$。成像仪器的每个物点的像实际上都是一个夫琅禾费衍射图样。如果两个**非相干**的物点很接近，衍射图样重叠，光强非相干直接相加。**瑞利判据**：当一个衍射图样的中央极大正好与另一个衍射图样的第一极小重合，就认为这两个物点刚好能被分辨，即 $$\theta_0=0.61\lambda/R$$。
 - 例：夫琅和费多缝衍射，有 $$N$$ 条缝，缝宽为 $$a$$，缝间距为 $$b$$。$$\displaystyle I=I_0(\frac{\sin\alpha}{\alpha})^2[\frac{\sin(N\beta)}{\sin\beta}]^2$$，其中 $$\alpha=\pi a\sin\theta/\lambda$$,  $$\beta=\pi b\sin\theta/\lambda$$。
 
-## 光的吸收、散射
-
-### 光的吸收
+## 光的吸收
 
 朗伯定律：$$I=I_0e^{-\alpha(\lambda)L}$$，其中 $$\displaystyle\alpha(\lambda)=-\frac{dI}{I}\frac{1}{dx}$$ 为吸收系数。
 
@@ -275,7 +273,7 @@ $$\displaystyle\tilde E(x,y)=\frac{1}{i\lambda}\iint_\Sigma\tilde E(x_0,y_0)\fra
 
 比尔定律：光通过透明溶液时溶液的吸收系数与溶液的质量分数成正比。
 
-### 光的散射
+## 光的散射
 
 光波在透明介质中传播时，部分光波偏离原来的传播方向向四面八方传播的现象。
 
@@ -285,7 +283,7 @@ $$\displaystyle\tilde E(x,y)=\frac{1}{i\lambda}\iint_\Sigma\tilde E(x_0,y_0)\fra
 
     - $$\displaystyle a<0.3\frac{\lambda}{2\pi}$$ 小颗粒散射，如空气中的尘埃、烟雾、小水滴，如一缕青烟；
 
-    - 分子散射（介质的某种性质出现涨落），如蔚蓝的天空、红橙色的日出和日落。
+    - 分子散射（介质的某种性质出现涨落），如地球大气散射掉波长较短的色光，看到白天布满蔚蓝色的天空；波长较长的色光能够穿透较厚的大气层，看到红橙色的日出和日落，以及[月全食时看到红色的月亮](https://www.youtube.com/watch?v=ntsczkygeYo&list=PLrAnGxL8nxOGbzB1n3rooc0R6iGlrGVP4&index=6)。
 
   - 米氏散射
     - $$a\approx\lambda$$ 大颗粒，丁达尔效应，e.g., 晨雾中的耶稣光、航空器的尾迹云、北京雾霾；
