--- a/_posts/2021-09-30-Calculus.md
+++ b/_posts/2021-09-30-Calculus.md
@@ -69,23 +69,28 @@ mathjax: true
 
 导数、导函数。
 
-反函数的导函数 $$y=f(x)$$ -> $$\displaystyle\frac{d}{dy}f^{-1}(y)=f'(f^{-1}(y))^{-1}$$. 例：$$\displaystyle\frac{d}{dx}\ln x=\frac{1}{x}$$.
+反函数的导函数 $$y=f(x)$$ -> $$\displaystyle\frac{d}{dy}f^{-1}(y)=f'(f^{-1}(y))^{-1}$$. 
 
-隐函数的导函数（链式法则）例：$$\displaystyle\frac{d}{dx}\arctan x=\frac{1}{1+x^2}$$. 过程：$$y=\arctan x$$, $$x=\tan y$$, $$\displaystyle\frac{d}{dx}x=\frac{d}{dx}\tan y$$，又 $$\displaystyle\frac{d}{dx}\tan y=\frac{d\tan y}{dy}\frac{dy}{dx}=\sec^2{y}\frac{dy}{dx}$$ -> $$\displaystyle 1=\sec^2y\frac{dy}{dx}$$ -> $$\displaystyle\frac{dy}{dx}=\cos^2y=\frac{\cos^2y}{\cos^2y+\sin^2y}=\frac{1}{1+\tan^2y}=\frac{1}{1+x^2}$$.
+- 例：$$\displaystyle\frac{d}{dx}\ln x=\frac{1}{x}$$.
+
+隐函数的导函数（链式法则）
+
+- 例：$$\displaystyle\frac{d}{dx}\arctan x=\frac{1}{1+x^2}$$. 过程：$$y=\arctan x$$, $$x=\tan y$$, $$\displaystyle\frac{d}{dx}x=\frac{d}{dx}\tan y$$，又 $$\displaystyle\frac{d}{dx}\tan y=\frac{d\tan y}{dy}\frac{dy}{dx}=\sec^2{y}\frac{dy}{dx}$$ -> $$\displaystyle 1=\sec^2y\frac{dy}{dx}$$ -> $$\displaystyle\frac{dy}{dx}=\cos^2y=\frac{\cos^2y}{\cos^2y+\sin^2y}=\frac{1}{1+\tan^2y}=\frac{1}{1+x^2}$$.
+- 例：$$\displaystyle\frac{d}{dx}\arcsin x=\frac{1}{\sqrt{1-x^2}}$$ 同理。
 
 [微积分 - 自然对数e](https://shi200005.github.io/download_file/Calculus_Natural_Logarithm.pdf)。**pending：证明超越数。**逼近 $$e$$ 的值：使用 $$\displaystyle e=\frac{1}{1!}+\frac{1}{2!}+\frac{1}{3!}+\frac{1}{4!}+\frac{1}{5!}+...$$
 
 ### 积分学
 
-牛顿-莱布尼兹公式：$$\displaystyle F(x)=\int_a^xf(t)dt$$, $$\displaystyle f(x)=\frac{d}{dx}\int_a^xf(t)dt$$, $$\displaystyle \int_a^b f(t)dt=F(b)-F(a)$$.  若积分上下限都是随 $$x$$ 变化的函数，变限积分求导公式 $$\displaystyle\frac{d}{dt}\int_{\alpha(t)}^{\beta(t)}g(t;\tau)d\tau=\int_{\alpha(t)}^{\beta(t)}\frac{\partial g(t;\tau)}{\partial t}d\tau + g[t;\beta(t)]\frac{d\beta(t)}{dt} - g[t;\alpha(t)]\frac{d\alpha(t)}{dt}$$. 可以用链式法则得到，可见积分变化率总能分为被积函数的影响 + 积分区域的影响两部分，将在[线性响应](https://shi200005.github.io/2024/11/28/Linear-Response/#linear-response)的数学验证中用到（见此节 Cross check 部分）。
+#### 牛顿-莱布尼兹公式
 
-熟练掌握简单换元 & 分部积分 $$\displaystyle\int udv=uv-\int vdu$$.
+$$\displaystyle F(x)=\int_a^xf(t)dt$$, $$\displaystyle f(x)=\frac{d}{dx}\int_a^xf(t)dt$$, $$\displaystyle \int_a^b f(t)dt=F(b)-F(a)$$.  若积分上下限都是随 $$x$$ 变化的函数，变限积分求导公式 $$\displaystyle\frac{d}{dt}\int_{\alpha(t)}^{\beta(t)}g(t;\tau)d\tau=\int_{\alpha(t)}^{\beta(t)}\frac{\partial g(t;\tau)}{\partial t}d\tau + g[t;\beta(t)]\frac{d\beta(t)}{dt} - g[t;\alpha(t)]\frac{d\alpha(t)}{dt}$$. 可以用链式法则得到，可见积分变化率总能分为被积函数的影响 + 积分区域的影响两部分，将在[线性响应](https://shi200005.github.io/2024/11/28/Linear-Response/#linear-response)的数学验证中用到（见此节 Cross check 部分）。
+
+#### 分部积分 
+
+$$\displaystyle\int udv=uv-\int vdu$$.
 
 作为考察重点但实际上没用的：复杂积分。此后课程考试中的涉及的积分都很简单，部分作业中困难积分要么可以用 [Wolfram Alpha - integral](https://www.wolframalpha.com/input?i=integral) 求解，要么可以编写程序进行数值积分。
-
-- The Gamma Function $$\displaystyle\Gamma(x)=\int_{0}^\infty t^{x-1}e^{-t}dt$$ 
-
-  是阶乘在实数域上的推广，若 $$n$$ 是整数，则 $$\Gamma(n)=(n-1)!$$。
 
 ### 变分法初步
 
