--- a/_posts/2021-09-30-Calculus.md
+++ b/_posts/2021-09-30-Calculus.md
@@ -18,6 +18,10 @@ mathjax: true
 
 微积分课程中学的积分是黎曼积分。把积分区间划分成小条，取小条区间内的最大值或者最小值，只要小条宽度无限小，积出来应该一样。对于狄里希利函数，取有理数为小条区间端点或无理数为小条区间端点，小条都可以无限小，但求出来积分值不一样，所以不是黎曼可积，但是用勒贝格积分可以积，本科课程没有涉及。
 
+参考阅读：
+
+1. Garrity, T. A. (2021). *All the Math You Missed: But Need to Know for Graduate School*. Cambridge University Press. Chapter 1.
+
 ## 绪论
 
 ### 常用不等式及其证明
@@ -63,20 +67,34 @@ mathjax: true
 
 处处连续但处处不可微的函数 - Weierstrass' Example，见 All 2.9（论证思路略）。
 
-微分学中值定理 -> L'Hosptal 法则 & Taylor 公式 （南大混乱邪恶考点）。
+#### 微分学中值定理
+
+- **罗尔定理 (Rolle's Theorem)**：如果函数在闭区间上连续，在开区间上可导，且在两个端点处函数值相等，那么在开区间内至少存在一点，其导数为零。
+
+- **拉格朗日中值定理 (Lagrange's Mean Value Theorem)：**如果函数在闭区间上连续，在开区间上可导，那么在开区间内至少存在一点，该点处的导数等于函数在闭区间上的平均变化率。
+
+  - -> Taylor 公式
+
+  - 非线性方程求根——[Newton-Rhaphson](https://shi200005.github.io/2025/02/02/Computational-Physics/#Newton-Raphson)
+
+- **柯西中值定理 (Cauchy's Mean Value Theorem)：**如果两个函数在闭区间上连续，在开区间上可导，且其中一个函数的导数在开区间上不为零，那么在开区间内至少存在一点，使得两个函数在该点处的导数之商等于函数在闭区间上平均变化率之商。
+
+  - -> L'Hosptal 法则
 
 泰勒级数 $$\displaystyle \sum _{n=0}^{\infty }{\frac {f^{(n)}(a)}{n!}}(x-a)^{n}$$
 
-导数、导函数。
+#### 导数、导函数
 
-反函数的导函数 $$y=f(x)$$ -> $$\displaystyle\frac{d}{dy}f^{-1}(y)=f'(f^{-1}(y))^{-1}$$. 
+- 反函数的导函数 $$y=f(x)$$ -> $$\displaystyle\frac{d}{dy}f^{-1}(y)=f'(f^{-1}(y))^{-1}$$. 
+  - 例：$$\displaystyle\frac{d}{dx}\ln x=\frac{1}{x}$$.
 
-- 例：$$\displaystyle\frac{d}{dx}\ln x=\frac{1}{x}$$.
 
-隐函数的导函数（链式法则）
+- 隐函数的导函数（链式法则）
 
-- 例：$$\displaystyle\frac{d}{dx}\arctan x=\frac{1}{1+x^2}$$. 过程：$$y=\arctan x$$, $$x=\tan y$$, $$\displaystyle\frac{d}{dx}x=\frac{d}{dx}\tan y$$，又 $$\displaystyle\frac{d}{dx}\tan y=\frac{d\tan y}{dy}\frac{dy}{dx}=\sec^2{y}\frac{dy}{dx}$$ -> $$\displaystyle 1=\sec^2y\frac{dy}{dx}$$ -> $$\displaystyle\frac{dy}{dx}=\cos^2y=\frac{\cos^2y}{\cos^2y+\sin^2y}=\frac{1}{1+\tan^2y}=\frac{1}{1+x^2}$$.
-- 例：$$\displaystyle\frac{d}{dx}\arcsin x=\frac{1}{\sqrt{1-x^2}}$$ 同理。
+  - 例：$$\displaystyle\frac{d}{dx}\arctan x=\frac{1}{1+x^2}$$. 过程：$$y=\arctan x$$, $$x=\tan y$$, $$\displaystyle\frac{d}{dx}x=\frac{d}{dx}\tan y$$，又 $$\displaystyle\frac{d}{dx}\tan y=\frac{d\tan y}{dy}\frac{dy}{dx}=\sec^2{y}\frac{dy}{dx}$$ -> $$\displaystyle 1=\sec^2y\frac{dy}{dx}$$ -> $$\displaystyle\frac{dy}{dx}=\cos^2y=\frac{\cos^2y}{\cos^2y+\sin^2y}=\frac{1}{1+\tan^2y}=\frac{1}{1+x^2}$$.
+
+  - 例：$$\displaystyle\frac{d}{dx}\arcsin x=\frac{1}{\sqrt{1-x^2}}$$ 同理。
+
 
 [微积分 - 自然对数e](https://shi200005.github.io/download_file/Calculus_Natural_Logarithm.pdf)。**pending：证明超越数。**逼近 $$e$$ 的值：使用 $$\displaystyle e=\frac{1}{1!}+\frac{1}{2!}+\frac{1}{3!}+\frac{1}{4!}+\frac{1}{5!}+...$$
 
