--- a/_posts/2022-04-20-Optics.md
+++ b/_posts/2022-04-20-Optics.md
@@ -265,6 +265,14 @@ $$\displaystyle\tilde E(x,y)=\frac{1}{i\lambda}\iint_\Sigma\tilde E(x_0,y_0)\fra
 - 例：平面波入射 -> 圆孔（半径为 $$R$$） -> 艾里斑。极坐标下求解，得到 $$\displaystyle I=I_0[\frac{2J_1(\varphi)}{\varphi}]^2$$，其中 $$\displaystyle\varphi=\frac{2\pi}{\lambda}R\sin\theta$$，$$\theta$$ 是衍射角，$$J_1$$ 是[贝塞尔函数](https://shi200005.github.io/2022/02/16/Partial-Differential-Equations/#贝塞尔函数)。第一极小的衍射角为 $$\sin\theta=0.61\lambda/R$$。成像仪器的每个物点的像实际上都是一个夫琅禾费衍射图样。如果两个**非相干**的物点很接近，衍射图样重叠，光强非相干直接相加。**瑞利判据**：当一个衍射图样的中央极大正好与另一个衍射图样的第一极小重合，就认为这两个物点刚好能被分辨，即 $$\theta_0=0.61\lambda/R$$。
 - 例：夫琅和费多缝衍射，有 $$N$$ 条缝，缝宽为 $$a$$，缝间距为 $$b$$。$$\displaystyle I=I_0(\frac{\sin\alpha}{\alpha})^2[\frac{\sin(N\beta)}{\sin\beta}]^2$$，其中 $$\alpha=\pi a\sin\theta/\lambda$$,  $$\beta=\pi b\sin\theta/\lambda$$。
 
+##### 天文应用——分光仪
+
+> 天体的光谱分析实际上是由夫琅和费开始的。夫琅和费在 1814 年用自制分光仪考察日光，第一次见到许多细暗线经过光谱。他把光谱从红色到紫色上面的显明的暗线用字母做符号，这系统至今还保留着。
+>
+> 恒星光谱是一道彩带，上面通常有暗线亘于其中。按照[多普勒](https://shi200005.github.io/2022/02/23/Classical-Mechanics/#多普勒效应)（Doppler）发表而后经斐索（Fizeau）特别补正的原理，光谱告诉我们很行如何在视线中运动。如果恒星是相对靠近，其光谱线便向紫色一端移动；如果它向后退去，光谱线便向红色一端移动。这移动多少随其运动速率而增加。
+>
+> ——《通俗天文学》西蒙·纽康 金克木译
+
 ## 光的吸收
 
 朗伯定律：$$I=I_0e^{-\alpha(\lambda)L}$$，其中 $$\displaystyle\alpha(\lambda)=-\frac{dI}{I}\frac{1}{dx}$$ 为吸收系数。
