--- a/_posts/2023-08-30-Wien.md
+++ b/_posts/2023-08-30-Wien.md
@@ -40,7 +40,7 @@ Foto aufgenommen von L Shi am 22.08.2023 um 15:02 Uhr in Wien Schloss Schönbrun
 
 **Franz Schubert**, Österreicher Komponist
 
-> Keiner, der den Schmerz des Andern, und Keiner, der die Freude des Andern [versteht](https://de.wikiquote.org/wiki/Verständnis). Man glaubt immer zu einander zu gehen und man geht nur neben einander. O Qual für den, der dieß erkennt!
+> Keiner, der den Schmerz des Andern, und Keiner, der die Freude des Andern versteht. Man glaubt immer zu einander zu gehen und man geht nur neben einander. O Qual für den, der dieß erkennt!
 >
 > -- [Tagebucheintrag, 27 März 1824](https://de.wikiquote.org/wiki/Franz_Schubert)
 
