--- a/_posts/2023-11-02-Language.md
+++ b/_posts/2023-11-02-Language.md
@@ -103,6 +103,10 @@ mathjax: true
 - diploid from διπλούς
 
   Double.
+  
+- metabolism from μεταωάλλειν
+
+  To change or exchange.
 
 ### Chemistry
 
