--- a/_posts/2021-09-30-Calculus.md
+++ b/_posts/2021-09-30-Calculus.md
@@ -63,7 +63,7 @@ mathjax: true
 
 一元函数知识点的简单例子：[微积分 - 一元函数](https://shi200005.github.io/download_file/Calculus_Mono.pdf)。
 
-可导/可微：一元情况下等价。**切线**：对函数某处线性增长率的刻画，$$y\approx f(a)+f'(a)(x-a)$$。
+可导/可微：一元情况下等价。一元函数 $$y=f(x)$$ 可微 - 线性增长率 - 切线斜率，$$y-y_0=f(x)-f(x_0)\approx f'(x)\vert_{x=x_0}(x-x_0)$$, $$dy=f^\prime(x) dx$$。
 
 处处连续但处处不可微的函数 - Weierstrass' Example，见 All 2.9（论证思路略）。
 
@@ -95,26 +95,28 @@ mathjax: true
 
   - 例：$$\displaystyle\frac{d}{dx}\arcsin x=\frac{1}{\sqrt{1-x^2}}$$ 同理。
 
-
-[微积分 - 自然对数e](https://shi200005.github.io/download_file/Calculus_Natural_Logarithm.pdf)。**pending：证明超越数。**逼近 $$e$$ 的值：使用 $$\displaystyle e=\frac{1}{1!}+\frac{1}{2!}+\frac{1}{3!}+\frac{1}{4!}+\frac{1}{5!}+...$$
+[微积分 - 自然对数 e](https://shi200005.github.io/download_file/Calculus_Natural_Logarithm.pdf)。**pending：证明超越数。**逼近 $$e$$ 的值：使用 $$\displaystyle e=\frac{1}{1!}+\frac{1}{2!}+\frac{1}{3!}+\frac{1}{4!}+\frac{1}{5!}+...$$
 
 ### 积分学
+
+虽然在作业和考试中受尽积分技巧折磨，此后课程考试中的涉及的积分都很简单，困难积分要么可以用 [Wolfram Alpha - integral](https://www.wolframalpha.com/input?i=integral) 求解，要么编程进行数值积分。
 
 #### 牛顿-莱布尼兹公式
 
 $$\displaystyle F(x)=\int_a^xf(t)dt$$, $$\displaystyle f(x)=\frac{d}{dx}\int_a^xf(t)dt$$, $$\displaystyle \int_a^b f(t)dt=F(b)-F(a)$$.  若积分上下限都是随 $$x$$ 变化的函数，变限积分求导公式 $$\displaystyle\frac{d}{dt}\int_{\alpha(t)}^{\beta(t)}g(t;\tau)d\tau=\int_{\alpha(t)}^{\beta(t)}\frac{\partial g(t;\tau)}{\partial t}d\tau + g[t;\beta(t)]\frac{d\beta(t)}{dt} - g[t;\alpha(t)]\frac{d\alpha(t)}{dt}$$. 可以用链式法则得到，可见积分变化率总能分为被积函数的影响 + 积分区域的影响两部分，将在[线性响应](https://shi200005.github.io/2024/11/28/Linear-Response/#linear-response)的数学验证中用到（见此节 Cross check 部分）。
 
-#### 分部积分 
-
-$$\displaystyle\int udv=uv-\int vdu$$.
-
-作为考察重点但实际上没用的：复杂积分。此后课程考试中的涉及的积分都很简单，部分作业中困难积分要么可以用 [Wolfram Alpha - integral](https://www.wolframalpha.com/input?i=integral) 求解，要么可以编写程序进行数值积分。
+- 分部积分 $$\displaystyle\int udv=uv-\int vdu$$.
+  - **勒让德变换** $$xdy≡d(xy)-ydx$$，将自变量 $$y$$ 变换为自变量 $$x$$。举例：[热力学 - 麦克斯韦关系](https://shi200005.github.io/2022/02/24/Thermodynamics/#%E5%9D%87%E5%8C%80%E7%B3%BB%E7%9A%84%E5%B9%B3%E8%A1%A1%E6%80%A7%E8%B4%A8)、[理论力学 - 哈密顿正则方程](https://shi200005.github.io/2022/04/30/Advanced-Classical-Mechanics/#%E5%93%88%E5%AF%86%E9%A1%BF%E5%8A%9B%E5%AD%A6)。
 
 ### 变分法初步
 
 一般地说，一个变量 $$J$$，如果其取值取决于函数关系 $$y=y(x)$$，就叫做函数 $$y(x)$$ 的**泛函**，记作 $$J[y(x)]$$。求泛函的极值问题就叫做**变分**问题。把变分问题转化为求解微分方程——**欧拉方程**。欧拉方程是变分问题所必须满足的**必要条件**。需要满足约束条件时，用拉格朗日乘子法（见下文）处理欧拉方程。
 
-一个简单的例子：$$J[y(x)]=\displaystyle\int_a^bF(x,y,y^\prime)dx$$，假设边界不变 $$\delta y\vert_a^b=0$$，则 $$J[y(x)]$$ 取极值（$$\delta J[y]=\displaystyle\int_a^b[\frac{\partial F}{\partial y}-\frac{d}{dx}(\frac{\partial F}{\partial y^\prime})]\delta ydx=0$$）的必要条件是 $$\displaystyle\frac{\partial F}{\partial y}-\frac{d}{dx}(\frac{\partial F}{\partial y^\prime})=0$$，或 $$\displaystyle\frac{\partial F}{dx}+\frac{d}{dx}(y^\prime\frac{\partial F}{\partial y^\prime}-F)=0$$。详见[力学变分原理](https://shi200005.github.io/download_file/ACM_Functional.pdf)。多变量推广、高阶导推广、有约束推广......
+一个简单的例子：$$J[y(x)]=\displaystyle\int_a^bF(x,y,y^\prime)dx$$，假设边界不变 $$\delta y\vert_a^b=0$$，则 $$J[y(x)]$$ 取极值（$$\delta J[y]=\displaystyle\int_a^b[\frac{\partial F}{\partial y}-\frac{d}{dx}(\frac{\partial F}{\partial y^\prime})]\delta ydx=0$$）的必要条件是 $$\displaystyle\frac{\partial F}{\partial y}-\frac{d}{dx}(\frac{\partial F}{\partial y^\prime})=0$$，或 $$\displaystyle\frac{\partial F}{dx}+\frac{d}{dx}(y^\prime\frac{\partial F}{\partial y^\prime}-F)=0$$（**分部积分**）。详见[力学变分原理](https://shi200005.github.io/download_file/ACM_Functional.pdf)。
+
+应用：力学变分原理：哈密顿原理 -> 拉格朗日方程、哈密顿正则方程。
+
+多变量推广、高阶导推广、有约束推广（**拉格朗日乘子法**，见下文）......
 
 ## 数项级数
 
@@ -152,47 +154,91 @@ $$\displaystyle\int udv=uv-\int vdu$$.
 
 这一节研究多维空间中函数微分和积分的性质，与之相关的概念：topology, compactness（通俗易懂的[讲解视频](https://www.bilibili.com/video/BV17u4y1Q72G/?spm_id_from=333.999.0.0&vd_source=b42b482aaa6d2b27140f562ee1671ff3)）, manifold, boundaries, interior. 见 All 4-5 章即可。意义：紧致集上的连续函数是有界的（物理学家喜欢）。
 
-### 矢量微分算符
+$$\vec y=\vec f(x_1,...,x_n)=\begin{bmatrix}\vec f_1(x_1,...,x_n) \\ \vdots\\ \vec f_m(x_1,...,x_n)\end{bmatrix}$$记为 $$\vec y=\vec f(\vec x)$$，$$\vec f:\mathbb R^n\to\mathbb R^m$$，物理中称为**矢量场**。
 
-在直角坐标系下 $$\nabla=\displaystyle\sum_i\vec e_i\displaystyle\frac{\partial}{\partial x_i}$$。在右手广义坐标系下怎么写？这取决于我们希望场论中的梯度、散度、旋度不随坐标系的变换而改变数值。参见下文多元函数积分引用的[高等数学_场论初步_柱坐标、球坐标下梯度、散度、旋度](https://www.bilibili.com/video/BV137411t7oY?spm_id_from=333.999.0.0)  。
+若 $$\vec f$$ 退化为标量，$$f(x_1,...,x_n):\mathbb R^n\to\mathbb R$$。
 
-[Nabla 算符 ∇ 的运算律以及常用公式 - 東雲正樹的文章 - 知乎](https://zhuanlan.zhihu.com/p/52834609)。**拉普拉斯算子** $$\nabla\cdot(\nabla\varphi)=(\nabla\cdot\nabla)\varphi=\nabla^2\varphi$$，在调和函数（如电势场）中常用。 这个链接的封面图就是高斯定理微分形式有关的一个很常用的数学公式 $$\nabla^2\displaystyle\frac{1}{r}=-4\pi\delta(\vec r)$$，这是数学的关系，见下面高斯定理，但是可以结合[电磁学 - 库仑定律](https://shi200005.github.io/2022/03/29/Electromagnetism/#%E5%9B%BA%E5%AE%9A%E7%82%B9%E7%94%B5%E8%8D%B7%E5%BA%93%E4%BB%91%E5%AE%9A%E5%BE%8B)记忆——空间原点孤立点电荷形成的电势场。
+### 微分学
 
-补充：拉普拉斯算子也可以对矢量场作用，例如在笛卡尔坐标系，$$\nabla^2\vec v=(\nabla^2 v_x)\vec e_x+(\nabla^2 v_y)\vec e_y+(\nabla^2 v_z)\vec e_z$$。在[电动力学 - 电磁波的传播](https://shi200005.github.io/2022/04/10/Electrodynamics/#%E7%94%B5%E7%A3%81%E6%B3%A2%E7%9A%84%E4%BC%A0%E6%92%AD)中使用。
+- 判断多元函数是否有极限。连续可微、可微、连续、偏导存在的关系。略
+- 驻点 -> 极值点 -> Hessian Matrix 的正定/负定/...性质 -> [线性代数](https://shi200005.github.io/2021/09/30/Linear-Algebra/#%E4%BA%8C%E6%AC%A1%E5%9E%8B)
 
-在场论中，常常需要区分**场点** $$\vec x$$ 和**源点** $$\vec x'$$ 。定义算符对场点微分 $$\nabla=\vec e_i\displaystyle\frac{\partial}{\partial x_i}$$，对源点微分 $$\nabla'=\vec e_i\displaystyle\frac{\partial}{\partial x_i'}$$，具体关于**相对位矢** $$\vec r=\vec x-\vec x'$$ 的运算律见电动力学课件。  
+#### 全微分
 
-### Scalar-Valued
+[如何理解偏微分和全微分？ - Chinese Cabbage的回答 - 知乎](https://www.zhihu.com/question/272499712/answer/441638297)。
 
-$$f(x_1,...,x_n):\mathbb R^n\to\mathbb R$$
+**雅可比矩阵**，$$\vec y-\vec y_0=\vec f(\vec x)-\vec f(\vec x_0)\approx\mathbf D\vec f(\vec x)\vert_{x=x_0}\cdot(\vec x-\vec x_0)$$,
 
-#### 微分学
 
-判断多元函数是否有极限。连续可微、可微、连续、偏导存在的关系。$$\displaystyle df(x,y)=\frac{\partial f}{\partial x}dx + \frac{\partial f}{\partial y}dy$$。[如何理解偏微分和全微分？ - Chinese Cabbage的回答 - 知乎](https://www.zhihu.com/question/272499712/answer/441638297)。也可以参照下面 vector-valued 部分雅可比表示的微分形式。
+$$
+\displaystyle d\vec y=\sum_i\frac{\partial\vec f}{\partial x_i}dx_i
+=(\mathbf D\vec f)d\vec x
+=\begin{bmatrix}
+\frac{\partial f_1}{\partial x_1} &\cdots & \frac{\partial f_1}{\partial x_n} \\ 
+\vdots & \ddots & \vdots \\
+\frac{\partial f_m}{\partial x_1} &\cdots & \frac{\partial f_m}{\partial x_n}
+\end{bmatrix}
+\begin{bmatrix}
+dx_1 \\ \vdots \\ dx_n \\
+\end{bmatrix}
+$$
 
-驻点 -> 极值点 -> Hessian Matrix 的正定/负定/...性质 -> [线性代数](https://shi200005.github.io/2021/09/30/Linear-Algebra/#%E4%BA%8C%E6%AC%A1%E5%9E%8B)
+
+- 引理：vector-valued functions 求导链式法则，见 All Theorem 3.3.3。引理给出推论：反函数的雅可比。再推论：隐函数定理（这个目前没遇到过）。
 
 - **齐次函数的欧拉定理**
 
   若函数 $$f(x_1,x_2,...,x_n)$$ 是变量 $$x_1,x_2,...,x_n$$ 的 $$m$$ 次齐次多项式 -> $$f(\lambda x_1,\lambda x_2,...,\lambda x_n)=\lambda^mf(x_1,x_2,...,x_n)$$ -> $$\displaystyle\sum_{i=1}^n\frac{\partial f}{\partial x_i}x_i=mf$$.  应用：广义能量 - [理论力学](https://shi200005.github.io/2022/04/30/Advanced-Classical-Mechanics/#%E8%AF%BA%E7%89%B9%E5%AE%9A%E7%90%86)。
 
-- **勒让德变换**
-
-  $$xdy≡d(xy)-ydx$$，将自变量 $$y$$ 变换为自变量 $$x$$。举例：[热力学 - 麦克斯韦关系](https://shi200005.github.io/2022/02/24/Thermodynamics/#%E5%9D%87%E5%8C%80%E7%B3%BB%E7%9A%84%E5%B9%B3%E8%A1%A1%E6%80%A7%E8%B4%A8)、[理论力学 - 哈密顿正则方程](https://shi200005.github.io/2022/04/30/Advanced-Classical-Mechanics/#%E5%93%88%E5%AF%86%E9%A1%BF%E5%8A%9B%E5%AD%A6)。
-
 - **拉格朗日乘子法**
 
-  将一个有 $$n$$ 个变量与 $$k$$ 个约束条件的最优化问题转换为一个解有 $$n+k$$ 个变量的方程组的解的问题。任务：求 $$f(\vec{x})$$ 的极值，约束条件为 $$g_1(\vec{x})=...=g_M(\vec{x})=0$$。数学等价：$$\nabla_{x_1,...,x_n,\lambda_1,...,\lambda_M}\mathscr{L}(x_1,...,x_n,...\lambda_1,...,\lambda_M)=0$$$$\Leftrightarrow$$$$\begin{cases} \nabla f(\vec{x})-\displaystyle\sum_{k=1}^M\lambda_k\nabla g_k(\vec x)=0 \\ g_1(\vec x)=...=g_M(\vec x)=0\end{cases}$$.
+  将一个有 $$n$$ 个变量与 $$k$$ 个约束条件的最优化问题转换为一个解有 $$n+k$$ 个变量的方程组的解的问题。
 
-#### 积分学
+  - 应用：约束条件下的变分问题。
 
-##### 积分换元 - 雅可比矩阵
+  求 $$f(\vec{x})$$ 的极值，约束条件为 $$g_1(\vec{x})=...=g_M(\vec{x})=0$$。设 $$\displaystyle\mathscr{L}(\vec x,\vec\lambda)=f(\vec x)-\sum_{k=1}^M\lambda_kg_k(\vec x)$$。
 
-[微积分 - 雅可比矩阵及其几何意义](https://shi200005.github.io/download_file/Calculus_Jacobian.pdf)：一元函数积分换元时，有一个“系数”（$$\displaystyle \int_a^be^{-2y}dy$$→$$\displaystyle \int_{\frac{a}{2}}^{\frac{b}{2}}e^{-x}\frac{1}{2}dx$$）。到了多元函数积分学，这个系数就是[**雅可比矩阵**的**行列式**](https://shi200005.github.io/2021/09/30/Linear-Algebra/#%E8%A1%8C%E5%88%97%E5%BC%8F)。Intuition: 前面已经给出了雅可比矩阵的意义：描述多元函数微分性质。那么对于 n 重积分换元，相当于有一个 $$\vec f:\mathbb R^n\to\mathbb R^n$$，从旧坐标映射到新坐标。结合[行列式的意义](https://shi200005.github.io/2021/09/30/Linear-Algebra/#%E8%A1%8C%E5%88%97%E5%BC%8F)，作为“系数”的雅可比行列式就是新旧坐标体积变化倍数。
+  
+  $$
+  \begin{bmatrix}
+  \frac{\partial \mathscr L}{\partial x_1} \\ \vdots \\
+  \frac{\partial \mathscr L}{\partial x_n} \\
+  \frac{\partial \mathscr L}{\partial \lambda_1} \\ \vdots \\
+  \frac{\partial \mathscr L}{\partial \lambda_k} \\
+  \end{bmatrix}
+  =\begin{bmatrix}
+  0 \\ \vdots \\ 0 \\
+  \end{bmatrix}
+  \Leftrightarrow
+  \begin{cases} 
+  \begin{bmatrix}
+  \frac{\partial f}{\partial x_1} \\ \vdots \\
+  \frac{\partial f}{\partial x_n} \\
+  \end{bmatrix}
+  -\sum_{k=1}^M\lambda_k
+  \begin{bmatrix}
+  \frac{\partial g_k}{\partial x_1} \\ \vdots \\
+  \frac{\partial g_k}{\partial x_n} \\
+  \end{bmatrix}
+  =\begin{bmatrix}
+  0 \\ \vdots \\ 0 \\
+  \end{bmatrix}
+  \\ g_1(\vec x)=...=g_M(\vec x)=0\end{cases}
+  $$
 
-试想我想用积分算算我奇形怪状的大庄园面积有几亩，建立一亩为单位长度的平面直角坐标系，积分计算面积就是把函数 $$f(x,y)=1$$ 在庄园范围做个二重积分。不管我把坐标系单位长度换成米还是英寸，我希望函数 $$f$$ 积分告诉我庄园有几亩，不以我变换的坐标系为转移，于是，我需要雅可比行列式。
 
-常用积分变换及其雅可比：二重积分-极坐标变换（雅可比为 $$\rho$$），三重积分-柱坐标变换（雅可比为 $$\rho$$）、球坐标变换（雅可比为 $$r^2\sin\theta$$）。
+
+### 积分学
+
+知识点的简单例子：[微积分 - 多元函数2](https://shi200005.github.io/download_file/Calculus_Multi_2.pdf)。
+
+#### 积分换元 - 雅可比行列式
+
+为了积分而换元，则变换前后变量维数必一致 $$\vec f:\mathbb R^n\to\mathbb R^n$$。设 $$\vec x=\vec g(\vec u)$$，向量微元 $$d\vec x=(\mathbf D\vec g)d\vec u$$，向量微元 $$d\vec x$$ 张成的体积微元等于[雅可比行列式](https://shi200005.github.io/2021/09/30/Linear-Algebra/#行列式) $$\det(\mathbf D\vec g)$$ 乘以 $$d\vec u$$ 张成的体积微元（[几何意义](https://shi200005.github.io/download_file/Calculus_Jacobian.pdf)）。
+
+- 例：**极坐标** $$\vec u=\begin{bmatrix}\rho \\ \varphi\end{bmatrix}$$, $$\vec x=\begin{bmatrix}x \\ y\end{bmatrix} = \begin{bmatrix}\rho\cos\varphi \\ \rho\sin\varphi\end{bmatrix}$$，换元积分雅可比 $$\det(\mathbf D\vec g)=\rho$$。<span style="color: blue;">柱坐标</span>换元积分雅可比 $$\rho$$，<span style="color: blue;">球坐标</span>积分换元雅可比 $$r^2\sin\theta$$。
+
+  例：$$\displaystyle \int_{-\infty}^\infty e^{-x^2}dx$$ 怎么积分？$$\displaystyle (\int_{-\infty}^\infty e^{-x^2}dx)(\int_{-\infty}^\infty e^{-y^2}dy)=2\pi\int_0^\infty e^{-r^2}rdr$$. 
 
 reference:
 
@@ -200,92 +246,60 @@ reference:
 
  - 《线性代数的几何意义》任广千等 5.11 雅可比矩阵及其行列式的几何意义
 
-例：$$\displaystyle \int_{-\infty}^\infty e^{-x^2}dx$$ 怎么积分？$$\displaystyle (\int_{-\infty}^\infty e^{-x^2}dx)(\int_{-\infty}^\infty e^{-y^2}dy)=2\pi\int_0^\infty e^{-r^2}rdr$$. 
+#### 累次积分
 
-如何在一个奇形怪状的区域内积分？-> **累次积分**：一个积分变量在某个范围，第二个积分变量是第一个积分变量的函数，第三个积分变量是前两个积分变量的函数......
+如何在一个奇形怪状的区域内积分？-> **累次积分**：一个积分变量在某个范围，第二个积分变量是第一个积分变量的函数，第三个积分变量是前两个积分变量的函数......后续课程中，绝大部分情况下我们求解的问题都是高度对称的，尤其是柱坐标、球坐标问题，绝大部分可以将积分变量分离开积分再相乘。对于以上多元函数知识点的简单例子：[微积分 - 多元函数](https://shi200005.github.io/download_file/Calculus_Multi.pdf)。
 
-
-后续课程中，绝大部分情况下我们求解的问题都是高度对称的，尤其是柱坐标、球坐标问题，绝大部分可以将积分变量分离开积分再相乘。
-
-对于以上多元函数知识点的简单例子：[微积分 - 多元函数](https://shi200005.github.io/download_file/Calculus_Multi.pdf)。
-
-##### 曲线、曲面积分
+#### 曲线、曲面积分（第一类）
 
 曲线积分：在一元函数中，我们只是对 $$f(x)$$ 在 $$x$$ 的某取值范围内积分。现在我们对 $$f(x_1,...,x_n)$$ 可以在 $$\mathbb R^n$$ 内一条曲线 $$s$$ 积分，为 $$\displaystyle\int_C fds$$，计算方法是找到*一个*参数把 $$s$$ 参数化，然后就变成了一元积分。
 
 曲面积分：在二重积分里面我们对二维空间的一个区域积分，现在可以在*三维*空间里定义一个二维曲面 $$S$$ 上对某函数积分，为 $$\displaystyle\int_S fdS$$，方法是积分换元成两个参数，然后就变成了二重积分，勿忘雅可比。更多 intuition 见 All 5.1.4节。
 
-### Vector-Valued 
+### 矢量微分算符
 
-$$\vec f(x_1,...,x_n)=\begin{pmatrix}\vec f_1(x_1,...,x_n) \\ \vdots\\ \vec f_m(x_1,...,x_n)\end{pmatrix}$$记为 $$\vec f(\vec x)$$，$$\vec f:\mathbb R^n\to\mathbb R^m$$，物理中称为**矢量场**。
+在物理学中，我们定义笛卡尔坐标 $$\vec x=\vec x(x,y,z)$$ 下的物理量 $$f(\vec x)$$ 矢量微分算符（[Nabla 算符 ∇ 的运算律以及常用公式 - 東雲正樹的文章 - 知乎](https://zhuanlan.zhihu.com/p/52834609)）是 $$\displaystyle\nabla f(\vec x)=\sum_{i}\vec e_i\frac{\partial f}{\partial x_i}$$。
 
-#### 微分学
+物理学家选取坐标通常要反应研究的物理问题的对称性，有时不一定要选取笛卡尔坐标系，而采用其他**右手螺旋正交**曲线坐标系，如常用的柱坐标 $$\vec u_1=\vec u_1(\rho,\varphi,z)$$ 和球坐标 $$\vec u_2=\vec u_2(r,\theta,\varphi)$$ 。如何确定一种标准，使不同坐标系下的涉及微分、积分运算的物理量一致呢？推导见[【学渣自救】高等数学｜场论初步｜柱坐标、球坐标下梯度、散度、旋度](https://www.bilibili.com/video/BV137411t7oY?spm_id_from=333.999.0.0)。
 
-一元函数可微 - 线性增长率 - 切线斜率。多元 VVF 推广 - **雅可比矩阵**，见 All 3.3，$$\vec y\approx\vec f(\vec a)+\mathbf D\vec f(\vec a)\cdot(\vec x-\vec a)$$。引理：vector-valued functions 求导链式法则，见 All Theorem 3.3.3。引理给出推论：反函数的雅可比。再推论：隐函数定理（这个目前没遇到过）。
+一般地，广义坐标下 $$\vec u=\vec u(q_1,q_2,q_3)$$，定义 Lamé 系数 $$\displaystyle h_\alpha=\Vert\frac{\partial\vec r}{\partial q_\alpha}\Vert$$。根据几何关系，柱坐标下 $$h_\rho=1$$, $$h_\varphi=r$$, $$h_z=1$$，球坐标下 $$h_r=1$$, $$h_\theta=r$$, $$h_\varphi=r\sin\theta$$。
 
-用矢量微分算符表示，就是
-
-
-$$
-\mathbf D\vec f(\vec a)=
-
-\begin{bmatrix}
-\nabla f_1(\vec x)^T \\
-\nabla f_2(\vec x)^T \\
-\vdots \\
-\nabla f_n(\vec x)^T \\
-\end{bmatrix}
-$$
-
-
-
-
-### 梯度、散度、旋度
-
-标量场的梯度 [Gradient - Wiki](https://en.wikipedia.org/wiki/Gradient)、矢量场的散度 [Divergence - Wiki](https://en.wikipedia.org/wiki/Divergence)（高斯定理）、矢量场的旋度 [Curl - Wiki](https://en.wikipedia.org/wiki/Curl_(mathematics))（斯托克斯定理）
-
-#### 高斯公式、格林公式、斯托克斯公式
-
-由于我们要用积分和微分联系几何对象**边界**和**内部**，此处研究**可定向**的曲线和曲面。第二类曲线/曲面积分可以转化为第一类曲线/曲面积分，反之则不一定。事实上，第一类曲线/曲面积分学过之后就没用过，故不必放在心上。**第二类曲线/曲面积分**好在哪里呢？我们可以使用**高斯公式、格林公式和斯托克斯公式**对我们研究的量进行转换。
-
-- 体三重积分 <--**高斯公式**--> 第二类封闭曲面积分 The Divergence Theorem
-
-  $$\displaystyle\oint_SPdydz+Qdzdx+Rdxdy=\int_{V}(\frac{\partial P}{\partial x}+\frac{\partial Q}{\partial y}+\frac{\partial R}{\partial z})dxdydz$$.
-
-  散度与通量：$$\nabla\cdot\vec A=\displaystyle\lim_{\Delta V\rightarrow0}\frac{\Delta\Phi}{\Delta V}$$,  $$\displaystyle\int_{V}\nabla\cdot\vec AdV=\displaystyle\oint_{S}\vec A\cdot d\vec S$$. 对应下文外微分形式的 $$T_3(d\omega_2)=\text{div}(T_2(\omega_2))$$.
-
-- 第二类曲面二重积分 <--**斯托克斯公式**--> 第二类封闭曲面积分 Stokes' Theorem
-
-  $$\displaystyle\oint_lPdx+Qdy+Rdz=\int_S(\frac{\partial R}{\partial y}-\frac{\partial Q}{\partial z})dydz+(\frac{\partial P}{\partial z}-\frac{\partial R}{\partial x})dzdx+(\frac{\partial Q}{\partial x}-\frac{\partial P}{\partial y})dxdy$$.
-
-  旋度与环量：$$(\nabla\times\vec A)_n=\displaystyle\lim_{\Delta l\rightarrow 0}\frac{\Delta\Gamma}{\Delta l}$$,  $$\displaystyle\int_{S}\nabla\times\vec A\cdot d\vec S=\displaystyle\oint_{l}\vec A\cdot d\vec l$$.​ 对应下文外微分形式的 $$T_2(d\omega_1)=\text{curl}(T_1(\omega_1))$$.
-  
-  - 特殊情况 - 如果曲面是平的，则积分区域定义在二维空间里：第二类平面二重积分 <--**格林公式**--> 第二类封闭平面上的封闭曲线积分（对旋度）  
-  
-    $$\displaystyle\oint_lPdx+Qdy=\int_D(\frac{\partial Q}{\partial x}-\frac{\partial P}{\partial y})dxdy$$.
-  
-    应用：椭圆面积公式。
-
-
-对于以上多元函数知识点的简单例子：[微积分 - 多元函数2](https://shi200005.github.io/download_file/Calculus_Multi_2.pdf)。
-
-如何在一个变换了的广义右手坐标下表示？
-
- - [高等数学_场论初步_柱坐标、球坐标下梯度、散度、旋度](https://www.bilibili.com/video/BV137411t7oY?spm_id_from=333.999.0.0)。reference: 《数学分析新讲III》张筑生 第十七章 附录 正交曲线坐标系中的场论计算。
- - 电磁学课件里没加解释的拉梅系数 $$h_\alpha$$，其实相当于把直角坐标系里的三个基向量，转化成任意微元相互右手垂直的广义坐标 $$q_\alpha$$​ 对应基矢量长度，与原来各向同性基矢量单位长度对应的比较系数。在有关面积和体积的度量上，也要转化回各向同性直角坐标系作为标准。
+- 向量微元：$$d\vec r=\sum_\alpha h_\alpha dq_\alpha d\vec e_\alpha$$
+  - [理论力学](https://shi200005.github.io/2022/04/30/Advanced-Classical-Mechanics/#拉格朗日方程-甩掉虚位移)中柱坐标与球坐标下的动能：$$\displaystyle T=\frac{1}{2}m(\dot\rho^2+\rho^2\dot\varphi^2+\dot z^2)$$, $$\displaystyle T=\frac{1}{2}m(\dot r^2+r^2\dot\theta^2+r^2\sin^2\theta\dot\varphi^2)$$
+- 矢量微分算符：从视频定理 1 中得 $$\displaystyle\nabla=\sum_\alpha\vec e_\alpha\frac{1}{h_\alpha}\frac{\partial}{\partial q_\alpha}$$
 
 [电磁学](https://shi200005.github.io/2022/03/29/Electromagnetism/)中常用结论
-
-- $$\nabla^2\displaystyle\frac{1}{r}=-4\pi\delta(\vec r)$$.
 
 - $$\nabla\times(\nabla T)=0$$, intuition - [Why Gradients Must Have Zero Curl](https://ccom.ucsd.edu/~ctiee/).
 - $$\nabla\cdot(\nabla\times\vec v)=0$$​.
 
+- 在场论中，常常需要区分**场点** $$\vec x$$ 和**源点** $$\vec x'$$ 。定义算符对场点微分 $$\displaystyle\nabla=\vec e_i\frac{1}{h_i}\frac{\partial}{\partial x_i}$$，对源点微分 $$\displaystyle\nabla'=\vec e_i\frac{1}{h_i}\frac{\partial}{\partial x_i'}$$，具体关于**相对位矢** $$\vec r=\vec x-\vec x'$$ 的运算律见电动力学课件。
+
+结合视频定理 4，可以推出**拉普拉斯算子** $$\nabla\cdot(\nabla u)=(\nabla\cdot\nabla) u=\nabla^2 u$$ 的形式，也记作 $$\Delta u$$，[数学物理方程](https://shi200005.github.io/2022/02/16/Partial-Differential-Equations/#施图姆-刘维尔本征值问题)中将求解相关偏微分方程。
+
+- $$\nabla^2\displaystyle\frac{1}{r}=-4\pi\delta(\vec r)$$，这是数学的关系，但是可以结合[电磁学 - 库仑定律](https://shi200005.github.io/2022/03/29/Electromagnetism/#%E5%9B%BA%E5%AE%9A%E7%82%B9%E7%94%B5%E8%8D%B7%E5%BA%93%E4%BB%91%E5%AE%9A%E5%BE%8B)记忆——空间原点孤立点电荷形成的电势场。
+- 拉普拉斯算子也可以对矢量场作用，例如在直角坐标系，$$\nabla^2\vec v=(\nabla^2 v_x)\vec e_x+(\nabla^2 v_y)\vec e_y+(\nabla^2 v_z)\vec e_z$$，在[电动力学 - 电磁波的传播](https://shi200005.github.io/2022/04/10/Electrodynamics/#%E7%94%B5%E7%A3%81%E6%B3%A2%E7%9A%84%E4%BC%A0%E6%92%AD)中使用；  
+
 ### 斯托克斯定理
 
-[在三维空间中，外微分形式的梯度、散度、旋度](https://shi200005.github.io/download_file/Calculus_gradcurldiv.pdf)，也当是 $$k$$-form 的一个小练习。
+[在三维空间中，外微分形式的梯度、散度、旋度](https://shi200005.github.io/download_file/Calculus_gradcurldiv.pdf)，也当是 $$k$$-form 的一个小练习。$$\displaystyle\int_Md\omega=\int_{\partial M}\omega$$​.  参见 All 6.7.
 
-$$\displaystyle\int_Md\omega=\int_{\partial M}\omega$$​.  参见 All 6.7.
+由于我们要用积分和微分联系几何对象**边界**和**内部**，此处研究**可定向**的曲线和曲面（第二类）。第二类曲线/曲面积分可以转化为第一类曲线/曲面积分，反之则不一定。第二类曲线/曲面积分好在哪里呢？我们可以使用**高斯公式、格林公式和斯托克斯公式**对我们研究的量进行转换。
+
+- 体三重积分 <--**高斯公式**--> 第二类封闭曲面积分 The Divergence Theorem
+
+  通量与散度： $$\displaystyle\oint_{S}\vec A\cdot d\vec S=\int_{V}\nabla\cdot\vec AdV$$. 
+
+  - 笛卡尔坐标系形式：$$\vec A=\vec A(P(x,y,z),Q(x,y,z),R(x,y,z))$$，于是$$\displaystyle\oint_SPdydz+Qdzdx+Rdxdy=\int_{V}(\frac{\partial P}{\partial x}+\frac{\partial Q}{\partial y}+\frac{\partial R}{\partial z})dxdydz$$. 对应外微分形式的 $$T_3(d\omega_2)=\text{div}(T_2(\omega_2))$$.
+
+- 第二类曲面二重积分 <--**斯托克斯公式**--> 第二类封闭曲线积分 Stokes' Theorem
+
+  环量与旋度： $$\displaystyle\oint_{l}\vec A\cdot d\vec l=\int_{S}\nabla\times\vec A\cdot d\vec S$$. 
+
+  - 笛卡尔坐标系形式：$$\displaystyle\oint_lPdx+Qdy+Rdz=\int_S(\frac{\partial R}{\partial y}-\frac{\partial Q}{\partial z})dydz+(\frac{\partial P}{\partial z}-\frac{\partial R}{\partial x})dzdx+(\frac{\partial Q}{\partial x}-\frac{\partial P}{\partial y})dxdy$$. 对应外微分形式的 $$T_2(d\omega_1)=\text{curl}(T_1(\omega_1))$$.
+- 若积分域在 $$(x,y)$$ 平面，被积函数 $$\vec A=\vec A(P(x,y),Q(x,y))$$：第二类平面二重积分 <--**格林公式**--> 第二类封闭平面上的封闭曲线积分 $$\displaystyle\oint_lPdx+Qdy=\int_D(\frac{\partial Q}{\partial x}-\frac{\partial P}{\partial y})dxdy$$. 
+    - 应用：椭圆面积公式。
+  - 如果 $$P(x,y)$$, $$Q(x,y)$$ 满足 $$\displaystyle\frac{\partial Q}{\partial x}=\frac{\partial P}{\partial y}$$，则 $$\vec A\cdot d\vec l$$ 是全微分，封闭曲线积分为 0。
 
 ### 广义 Leibniz 积分律
 
