--- a/_posts/2025-03-16-nir2006linking.md
+++ b/_posts/2025-03-16-nir2006linking.md
@@ -17,7 +17,10 @@ The paper is [1](https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.97.16
 
   Note that here the master equation is approximated as a Fokker-Planck equation; see [Stochastic Processes - Fokker-Planck equations](https://shi200005.github.io/2025/03/15/Stochastic-Processes/#the-fokker-planck-equation). $$\displaystyle\frac{\partial P(y,t)}{\partial t}=-\frac{\partial}{\partial y}\{a_1(y)P\}+\frac{1}{2}\frac{\partial^2}{\partial y^2}\{a_2(y)P\}$$, where $$\displaystyle a_\nu(y)=\int_{-\infty}^{\infty}r^\nu W(y;r)dr$$. 
 
-  For degradation, one molecule dies per reaction -> $$\displaystyle r=-\frac{1}{V}$$. $$\displaystyle W(x;r)=\gamma_2n\delta(-\frac{1}{V})$$. $$\displaystyle a_1(x)=\int_{-\infty}^{\infty}(-\frac{1}{V})(\gamma_2n\delta(-\frac{1}{V}))dr=-\gamma_2x$$ -> $$\displaystyle\frac{\partial}{\partial x}[\gamma_2xp(x)]$$ term. I suspect the authors ignored $$a_2$$ term from the smoothness of $$p(x)$$.
+  For degradation, one molecule dies per reaction -> $$\displaystyle r=-\frac{1}{V}$$. $$\displaystyle W(x;r)=\gamma_2n\delta(-\frac{1}{V})$$. 
+
+  - $$\displaystyle a_1(x)=\int_{-\infty}^{\infty}(-\frac{1}{V})\left(\gamma_2n\delta(r-\frac{1}{V})\right)dr=-\gamma_2x$$ -> $$\displaystyle-\frac{\partial}{\partial x}\{a_1(x)P\}=\frac{\partial}{\partial x}[\gamma_2xp(x)]=\gamma_2(p+\frac{n}{V}\frac{\partial}{\partial x}p)$$
+  - $$\displaystyle a_2(x)=\int_{-\infty}^{\infty}(-\frac{1}{V})^2\left(\gamma_2n\delta(r-\frac{1}{V})\right)dr=\gamma_2\frac{x}{V}$$ -> $$\displaystyle\frac{1}{2}\frac{\partial^2}{\partial x^2}\{a_2(x)P\}=\gamma_2(\frac{x}{2V}\frac{\partial^2}{\partial x^2}P+\frac{1}{V}\frac{\partial}{\partial x}P)$$...???
 
 - Derive Eq. (4) & (8) see [note](https://shi200005.github.io/download_file/Nir2006Linking.pdf)
 
